# seqsvr

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod  go.sum  nebula
allocsvr/: CMakeLists.txt  README.md  alloc_server.cc  alloc_server.h  alloc_service_impl.h  allocsvr_manager.cc  allocsvr_manager.h  zrpc_alloc_dispatcher.cc  zrpc_alloc_dispatcher.h  zrpc_alloc_service.cc
client/: CMakeLists.txt  README.md  client.cc  client.h  client_command_handler.cc  client_command_handler.h
cmake/: FindFolly.cmake  FindProxygen.cmake  FindWangle.cmake
conf/: allocsvr.json  client.json  service.json
deploy/etc/: alloc.yaml  mediate.yaml  store.yaml
proto/cc/: seqsvr.pb.cc  seqsvr.pb.h
proto/proto/: seqsvr.proto
proto/seqsvr/: README.md  build2.sh  class_name_registers.go  codec_schema.tl.pb.go  core_types.go  decode.go  encode.go  rpc_client_registers.go  rpc_error_codes.go  section.go  seqsvr.tl.pb.go  seqsvr.tl_helper.go  set.go  vars.go
proto/seqsvr/rpc/metadata/: build2.sh  doc.go  nicemd.go  nicemd_test.go  rpc_metadata.pb.go  rpc_metadata_codec.go  single_key.go
seqsvr/: CMakeLists.txt  rpc_seq_dispatcher.cc  rpc_seq_dispatcher.h  rpc_seq_service.cc  rpc_seq_service.h  seq_server.cc  seq_server.h  seq_service_impl.cc  seq_service_impl.h  sequence_manager.cc  sequence_manager.h  set.h  zrpc_seq_dispatcher.cc  zrpc_seq_dispatcher.h  zrpc_seq_service.cc  zrpc_seq_service.h
seqsvr/alloc/: helper.go
seqsvr/alloc/client/: alloc_client.go
seqsvr/alloc/client/cli/: cli.go
seqsvr/alloc/cmd/alloc/: main.go
seqsvr/alloc/etc/: alloc.yaml
seqsvr/alloc/internal/config/: config.go
seqsvr/alloc/internal/core/: alloc.fetchNextSequence_handler.go  alloc.getCurrentSequence_handler.go  core.go
seqsvr/alloc/internal/dao/: alloc.go  dao.go  lease.go  lease_clerk.go  store.go
seqsvr/alloc/internal/server/: server.go
seqsvr/alloc/internal/server/grpc/: grpc.go
seqsvr/alloc/internal/server/grpc/service/: alloc_service_impl.go  service.go
seqsvr/alloc/internal/svc/: service_context.go
seqsvr/allocsvr/: CMakeLists.txt  README.md  alloc_server.cc  alloc_server.h  alloc_service_handler.cc  alloc_service_handler.h  alloc_service_impl.cc  allocsvr_manager.cc  allocsvr_manager.h  client_manager.cc  client_manager.h  lease_clerk.cc  lease_clerk.h  zrpc_alloc_service.h
seqsvr/base/: CMakeLists.txt  config.cc  config.h  message_handler_util.h  router_table.cc  router_table.h  section.h  set.cc  set.h  thrift_util.h
seqsvr/mediate/client/: mediate_client.go
seqsvr/mediate/cmd/mediate/: main.go
seqsvr/mediate/etc/: mediate.yaml
seqsvr/mediate/internal/core/: core.go  mediate.registerAllocSvr_handler.go  mediate.unRegisterAllocSvr_handler.go
seqsvr/mediate/internal/server/: server.go
seqsvr/mediate/internal/server/grpc/: grpc.go
seqsvr/mediate/internal/server/grpc/service/: mediate_service_impl.go  service.go
seqsvr/mediate/internal/svc/: service_context.go
seqsvr/mediatesvr/: CMakeLists.txt  README.md  mediate_handler.cc  mediate_handler.h  mediate_server.cc  mediate_server.h  mediate_service_handler.cc  mediate_service_handler.h
seqsvr/proto/: CMakeLists.txt  build.sh  seqsvr.thrift
seqsvr/proto/cc/: seqsvr.pb.cc  seqsvr.pb.h
seqsvr/proto/gen-cpp2/: AllocService.cpp  AllocService.h  AllocService.tcc  AllocService_client.cpp  AllocService_custom_protocol.h  AllocService_processmap_compact.cpp  MediateService.cpp  MediateService.h  MediateService.tcc  MediateService_client.cpp  MediateService_custom_protocol.h  MediateService_processmap_simple_json.cpp  StoreService.cpp  StoreService.h  StoreService.tcc  StoreService_client.cpp  StoreService_custom_protocol.h  StoreService_processmap_binary.cpp  seqsvr_constants.cpp  seqsvr_constants.h  seqsvr_data.cpp  seqsvr_data.h  seqsvr_types.cpp  seqsvr_types.h  seqsvr_types.tcc  seqsvr_types_custom_protocol.h
seqsvr/proto/proto/: build.sh  seqsvr.proto
seqsvr/seqapi/: README.md
seqsvr/seqsvr/: CMakeLists.txt  seq_server.cc  seq_server.h  sequence_manager.cc  sequence_manager.h  sequence_service_handler.cc  sequence_service_handler.h  zrpc_seq_dispatcher.cc  zrpc_seq_dispatcher.h
seqsvr/store/: helper.go
seqsvr/store/client/: store_client.go
seqsvr/store/cmd/store/: main.go
seqsvr/store/etc/: store.yaml
seqsvr/store/internal/config/: config.go
seqsvr/store/internal/core/: core.go  store.loadMaxSeqsData_handler.go  store.loadRouteTable_handler.go  store.saveMaxSeq_handler.go  store.saveRouteTable_handler.go
seqsvr/store/internal/dao/: dao.go  store.go  store_test.go
seqsvr/store/internal/server/: server.go
seqsvr/store/internal/server/grpc/: grpc.go
seqsvr/store/internal/server/grpc/service/: service.go  store_service_impl.go
seqsvr/store/internal/svc/: service_context.go
seqsvr/storesvr/: CMakeLists.txt  README.md  store_server.cc  store_server.h  store_service_handler.cc  store_service_handler.h  store_service_impl.cc  store_service_impl.h  storesvr_manager.cc  storesvr_manager.h  zrpc_store_dispatcher.cc  zrpc_store_dispatcher.h  zrpc_store_service.cc  zrpc_store_service.h
seqsvr/storesvr/test/: CMakeLists.txt  store_client.cc
storesvr/: CMakeLists.txt  store_server.cc  store_service_impl.cc  store_service_impl.h  storesvr_manager.cc  storesvr_manager.h  zrpc_store_dispatcher.cc  zrpc_store_dispatcher.h  zrpc_store_service.cc  zrpc_store_service.h
